--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
+    "mongoose": "^7.2.3",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.3"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.9.0",
+    "react-intersection-observer": "^9.4.4",
+    "react-rough-notation": "^1.0.5",
+    "typescript": "5.1.3",
+    "typewriter-effect": "^2.20.1"
   }
 }
